--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 
 <head>
     <meta charset="utf-8">
-    <title>MTENDERE education consultancy</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    
+    <title>Success Stories | Mtendere Education Consult - Study Abroad Malawi</title>
+    <meta name="description" content="Discover inspiring success stories of students from Malawi who achieved their international education dreams with Mtendere Education Consult. Start your journey today.">
+    <meta name="keywords" content="Mtendere Education Consult, Malawi Students Abroad, Study Abroad Malawi, Success Stories, International Education, Scholarships Malawi, Study in India, Study in USA, Study in Canada, Education Consultancy Malawi">
+    <meta property="og:title" content="Success Stories - Mtendere Education Consult">
+    <meta property="og:description" content="See how students from Malawi achieved their global dreams through Mtendere Education Consult.">
+    <meta property="og:image" content="path_to_cover_success_image.jpg">
+    <meta property="og:url" content="https://www.mtendereeducation.com/success-stories">
+    <meta name="twitter:card" content="summary_large_image">
+    <link rel="canonical" href="https://www.mtendereeducation.com/success-stories">
+
 
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/animate.min.css">
@@ -17,6 +24,12 @@
     <link rel="stylesheet" href="assets/fonts/flaticon/font/flaticon.css">
     <link rel="stylesheet" href="assets/css/aos.css">
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <!-- SwiperJS CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
+
+    <!-- AOS CSS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 </head>
 
@@ -406,41 +419,146 @@
         </div>
     </div>
 
-    <div class="container mt-12">
-        <h2 class="text-3xl font-bold text-center text-blue-800 mb-6">Success Stories</h2>
-        <div class="row">
-            <div class="col-12 col-sm-6 col-md-4 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-                <div class="story-card bg-white p-6 rounded-xl shadow-lg text-center">
-                    <img src="path_to_image.jpg" alt="Student Image" class="w-full h-40 object-cover rounded-lg mb-4">
-                    <h3 class="text-xl font-semibold text-blue-700">Thoko's Journey to Success</h3>
-                    <p class="text-gray-600 mt-2">"Thanks to Mtendere Education Consult, I found the right scholarship
-                        in Germany, where I studied Engineering. My dream career is now a reality!"</p>
-                    <a href="#" class="text-blue-600 hover:underline mt-4 inline-block">Read Full Story</a>
-                </div>
-            </div>
 
-            <div class="col-12 col-sm-6 col-md-4 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-                <div class="story-card bg-white p-6 rounded-xl shadow-lg text-center">
-                    <img src="path_to_image2.jpg" alt="Student Image" class="w-full h-40 object-cover rounded-lg mb-4">
-                    <h3 class="text-xl font-semibold text-blue-700">John's Path to a Medical Career</h3>
-                    <p class="text-gray-600 mt-2">"Mtendere guided me in securing a medical scholarship in the UK. I’m
-                        now pursuing my dream of becoming a doctor, and I couldn’t have done it without their help."</p>
-                    <a href="#" class="text-blue-600 hover:underline mt-4 inline-block">Read Full Story</a>
-                </div>
-            </div>
+    <section class="success-section" id="success">
+        <h2 class="success-title" data-aos="fade-up">Success Stories</h2>
 
-            <div class="col-12 col-sm-6 col-md-4 col-lg-4" data-aos="fade-up" data-aos-delay="300">
-                <div class="story-card bg-white p-6 rounded-xl shadow-lg text-center">
-                    <img src="path_to_image3.jpg" alt="Student Image" class="w-full h-40 object-cover rounded-lg mb-4">
-                    <h3 class="text-xl font-semibold text-blue-700">Martha’s Success in Business Studies</h3>
-                    <p class="text-gray-600 mt-2">"With the help of Mtendere, I secured an internship in a top firm in
-                        the USA. Their support made my dreams of studying and working abroad come true!"</p>
-                    <a href="#" class="text-blue-600 hover:underline mt-4 inline-block">Read Full Story</a>
+        <div class="swiper mySwiper" data-aos="fade-up" data-aos-delay="200">
+            <div class="swiper-wrapper">
+
+                <!-- Student 1 -->
+                <div class="swiper-slide">
+                    <div class="student-card">
+                        <img src="path_to_caroline_image.jpg" alt="Caroline Tembo">
+                        <div class="overlay-quote">"Empowering Dreams. Building Futures."</div>
+                        <h3 class="student-name">Caroline Tembo</h3>
+                        <p class="student-course">Hons Degree in Commerce - PCTE India</p>
+                        <a href="#" class="read-story-btn" data-bs-toggle="modal" data-bs-target="#story1">Read Story</a>
+                    </div>
+                </div>
+
+                <!-- Student 2 -->
+                <div class="swiper-slide">
+                    <div class="student-card">
+                        <img src="path_to_janet_image.jpg" alt="Janet Kandulu">
+                        <div class="overlay-quote">"Nutrition for the future, dreams fulfilled."</div>
+                        <h3 class="student-name">Janet Kandulu</h3>
+                        <p class="student-course">BSc Nutrition and Dietetics - Chandigarh</p>
+                        <a href="#" class="read-story-btn" data-bs-toggle="modal" data-bs-target="#story2">Read Story</a>
+                    </div>
+                </div>
+
+                <!-- Student 3 -->
+                <div class="swiper-slide">
+                    <div class="student-card">
+                        <img src="path_to_trust_image.jpg" alt="Trust Chikondi Mangani">
+                        <div class="overlay-quote">"Cyber Security, Secured Future."</div>
+                        <h3 class="student-name">Trust Chikondi Mangani</h3>
+                        <p class="student-course">BSc Cybersecurity - 2023</p>
+                        <a href="#" class="read-story-btn" data-bs-toggle="modal" data-bs-target="#story3">Read Story</a>
+                    </div>
+                </div>
+
+                <!-- Student 4 -->
+                <div class="swiper-slide">
+                    <div class="student-card">
+                        <img src="path_to_edna_image.jpg" alt="Edna Karonga">
+                        <div class="overlay-quote">"Leading with an MBA Vision."</div>
+                        <h3 class="student-name">Edna Karonga</h3>
+                        <p class="student-course">MBA - Chandigarh University</p>
+                        <a href="#" class="read-story-btn" data-bs-toggle="modal" data-bs-target="#story4">Read Story</a>
+                    </div>
+                </div>
+
+                <!-- Student 5 -->
+                <div class="swiper-slide">
+                    <div class="student-card">
+                        <img src="path_to_ian_image.jpg" alt="Ian Ndola">
+                        <div class="overlay-quote">"A global mindset, an MBA from Alabama."</div>
+                        <h3 class="student-name">Ian Ndola</h3>
+                        <p class="student-course">MBA - University of Alabama USA</p>
+                        <a href="#" class="read-story-btn" data-bs-toggle="modal" data-bs-target="#story5">Read Story</a>
+                    </div>
+                </div>
+
+                <!-- Student 6 -->
+                <div class="swiper-slide">
+                    <div class="student-card">
+                        <img src="path_to_mirabel_image.jpg" alt="Mirabel Lopote">
+                        <div class="overlay-quote">"Designing Dreams with Fashion."</div>
+                        <h3 class="student-name">Mirabel Lopote</h3>
+                        <p class="student-course">Masters in Fashion Design - PCTE</p>
+                        <a href="#" class="read-story-btn" data-bs-toggle="modal" data-bs-target="#story6">Read Story</a>
+                    </div>
+                </div>
+
+                <!-- Student 7 -->
+                <div class="swiper-slide">
+                    <div class="student-card">
+                        <img src="path_to_lexina_image.jpg" alt="Lexina Kumwenda">
+                        <div class="overlay-quote">"Interior Design with global standards."</div>
+                        <h3 class="student-name">Lexina Kumwenda</h3>
+                        <p class="student-course">BSc Interior Design - Chandigarh</p>
+                        <a href="#" class="read-story-btn" data-bs-toggle="modal" data-bs-target="#story7">Read Story</a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <section class="cta-section" data-aos="fade-up" style="background: linear-gradient(135deg, #0056b3, #003366); color: white; padding: 60px 20px; text-align: center;">
+        <h2 style="font-size: 32px; font-weight: 700;">Ready to Start Your Global Education Journey?</h2>
+        <p style="margin: 20px auto; max-width: 600px; font-size: 18px;">Join hundreds of successful students who trusted Mtendere Education Consult to unlock opportunities abroad. Your success story starts now.</p>
+        <a href="/apply-now" class="btn btn-primary" style="background-color: #ffcc00; color: #003366; padding: 12px 30px; font-size: 18px; font-weight: bold; border-radius: 50px; margin-top: 20px;">Apply Now</a>
+    </section>
+    
+
+    <!-- Modals Section -->
+    <!-- Example Modal for Caroline -->
+    <div class="modal fade" id="story1" tabindex="-1" aria-labelledby="story1Label" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="story1Label">Caroline Tembo's Story</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Caroline Tembo from Kafukule village in Mzimba graduated with an Honours Degree in Commerce at PCTE Institute of Engineering in India. Through determination and the right support, she has turned her dreams into a global career opportunity.
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- Copy similar modal structures for Janet, Trust, Edna, Ian, Mirabel, Lexina -->
+
+    <!-- SwiperJS Script -->
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+
+    <!-- AOS Script -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+        AOS.init();
+        var swiper = new Swiper(".mySwiper", {
+            slidesPerView: 1,
+            spaceBetween: 30,
+            loop: true,
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true,
+            },
+            autoplay: {
+                delay: 3500,
+                disableOnInteraction: false,
+            },
+            breakpoints: {
+                640: { slidesPerView: 1 },
+                768: { slidesPerView: 2 },
+                1024: { slidesPerView: 3 }
+            }
+        });
+    </script>
 
     <!-- Popup Overlay -->
          <!----
