--- a/gallery.html
+++ b/gallery.html
@@ -638,19 +638,79 @@
                             <h5 class="card-title
                                 text-blue-700">Email Us</h5>
                             <p class="card-text">
-                                <a href="mailto:info@untreeco.com">info@untreeco.com</a>
+                                <a href="mailto:info@untreeco.com">mtendereeducationconsult@gmail.com</a>
                             </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <h5 class="card-title text-blue-700">Call Us</h5>
+                            <p class="card-text">
+                                <a href="tel:+265 88 123 4567">+265 88 123 4567</a><br>
+                                <a href="tel:+265 88 123 4568">+265 88 123 4568</a>
+                                </a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <h5 class="card-title text-blue-700">Visit Us</h5>
+                            <p class="card-text">
+                                Mtendere House, Off Mandala Road,<br>
+                                Area 3, Behind NBs<br>
+                                1st Floor Room 1,<br>
+                                Lilongwe, Malawi
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <h5 class="card-title text-blue-700">Follow Us</h5>
                             <div class="social-icons">
                                 <a href="#"><span class="icon-facebook"></span></a>
                                 <a href="#"><span class="icon-twitter"></span></a>
                                 <a href="#"><span class="icon-instagram"></span></a>
-                
                                 <a href="#"><span class="icon-linkedin"></span></a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <!--- Embeded Maps--->
+            <div class="col-lg-12 text-center mx-auto"> 
+                <div id="google-map" style="height: 400px;">
+                    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&callback=initMap"
+                        async defer></script>
+                    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+                </div>
+                <script>
+                    function initMap() {
+                        var location = { lat: -13.9626, lng: 33.7872 };
+                        var map = new google.maps.Map(document.getElementById('google-map'), {
+                            zoom: 15,
+                            center: location
+                        });
+                        var marker = new google.maps.Marker({
+                            position: location,
+                            map: map
+                        });
+                    }
+                </script>
+
+            </div>
+            <!-- Contact Section End -->
         </div>
     </div>
     <!-- Contact Section End -->
