--- a/team.html
+++ b/team.html
@@ -55,8 +55,8 @@
                     <a href="#faqModal" class="small text-dark mr-4" data-toggle="modal">
                         <i class="fa fa-question-circle mr-1"></i> Have a Question?
                     </a>
-                    <a href="tel:+265000000000" class="small text-dark mr-4">
-                        <i class="fa fa-phone mr-1"></i> +265 000 000 000
+                    <a href="tel:+265999360325" class="small text-dark mr-4">
+                        <i class="fa fa-phone mr-1"></i> +265 999 360 325
                     </a>
                     <a href="mailto:mtendereeducationconsult@gmail.com" class="small text-dark">
                         <i class="fa fa-envelope mr-1"></i> mtendereeducationconsult@gmail.com
@@ -139,7 +139,7 @@
 
     <!-- Header Start -->
     <div class="jumbotron jumbotron-fluid page-header position-relative overlay-bottom" style="margin-bottom: 90px;"> 
-        <div class="hero overlay" style="background-image: url('images/img-school-3-min.jpg');">
+        <div class="hero overlay" style="background-image: url('assets/imgs/team.jpg');">
             <div class="container text-center py-5">
                 <h1 class="text-white display-1">Our Experts</h1>
                 <div class="d-inline-flex text-white mb-5">
@@ -221,9 +221,29 @@
                         <div class="text-center p-4">
                             <h5 class="mb-0">Mr. Rabson Kaluwile</h5>
                             <small>Environmental Health Expert<br>MSc (Dundee), Dip. Public Health Inspection (Polytechnic)</small>
-                        </div>
+                        </div>              
                     </div>
                 </div>
+
+                <!-- Ms. Brenda Tawina Kumwembe -->
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="team-item bg-light">
+                        <div class="overflow-hidden">
+                            <img class="img-fluid" src="assets/img/brenda tawina.jpg" alt="Brenda Tawina Kumwembe">
+                        </div>
+                        <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
+                            <div class="bg-light d-flex justify-content-center pt-2 px-1">
+                                <a class="btn btn-sm-square btn-primary mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-sm-square btn-primary mx-1" href="#"><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-sm-square btn-primary mx-1" href="#"><i class="fab fa-instagram"></i></a>
+                            </div>
+                        </div>
+                        <div class="text-center p-4">
+                            <h5 class="mb-0">Brenda Tawina Kumwembe</h5>
+                            <small>Admissions Coordinator<br>BA in Management & Public Relations</small>
+                        </div>
+                    </div>
+                </div> 
 
                 <!-- Ms. Brenda Gondwe -->
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -285,11 +305,31 @@
                     </div>
                 </div>
 
-                <!-- Ms. Brenda Tawina Kumwembe -->
+                <!-- Timothy-->
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="assets/imgs/tawina.jpg" alt="Brenda Tawina Kumwembe">
+                            <img class="img-fluid" src="assets/imgs/timothy.jpg" alt="Brenda Tawina Kumwembe">
+                        </div>
+                        <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
+                            <div class="bg-light d-flex justify-content-center pt-2 px-1">
+                                <a class="btn btn-sm-square btn-primary mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-sm-square btn-primary mx-1" href="#"><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-sm-square btn-primary mx-1" href="#"><i class="fab fa-instagram"></i></a>
+                            </div>
+                        </div>
+                        <div class="text-center p-4">
+                            <h5 class="mb-0">Brenda Tawina Kumwembe</h5>
+                            <small>Admissions Coordinator<br>BA in Management & Public Relations</small>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Ortiz -->
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="team-item bg-light">
+                        <div class="overflow-hidden">
+                            <img class="img-fluid" src="assets/imgs/ortiz" alt="Brenda Tawina Kumwembe">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                             <div class="bg-light d-flex justify-content-center pt-2 px-1">
@@ -324,7 +364,7 @@
                                     about.&rdquo;
                                 </p>
                                 <div class="author mt-4">
-                                    <img src="images/person_1.jpg" alt="Student 1" class="rounded-full w-16 h-16">
+                                    <img src="images/" alt="Student 1" class="rounded-full w-16 h-16">
                                     <h3 class="text-xl font-semibold text-blue-700">Thoko M.</h3>
                                     <p class="position text-gray-500">Engineering Student, University of Toronto</p>
                                 </div>
